--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.5.0",
     "email-existence": "^0.1.6",
     "npm": "^6.14.5",
+    "node": "^14.16.0",
     "pg": "^8.2.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -20,10 +21,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "serve -s build",
+    "build": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
