--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "bootstrap": "^4.5.0",
     "email-existence": "^0.1.6",
     "npm": "^6.14.5",
-    "node": "^14.16.0",
     "pg": "^8.2.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -18,6 +17,10 @@
     "react-scripts": "^3.4.1",
     "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0"
+  },
+  "engines" : { 
+    "npm" : "^6.14.5",
+    "node" : "^14.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
